<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SocialMedia</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="tv_pulsarParaRegistro">REGISTRATE AQUI</string>
    <string name="register_activity">REGISTER ACTIVITY</string>
    <string name="registrate_ahora">REGISTRATE AHORA</string>
    <string name="registrar">Registrarse</string>
    <string name="name">Nombre usuario</string>
    <string name="confirmation">Confirmación password</string>
    <string name="socialmedia">Infinity</string>
    <string name="sm">SM</string>
    <string name="version">Version 1.0.0</string>
    <string name="completar_informacion">COMPLETAR INFORMACION</string>
    <string name="confirmar">Confirmar</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="perfil">Perfil</string>
    <string name="filtros">Filtros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_publicacion">CREAR PUBLICACION</string>
    <string name="nombre_del_juego">Nombre del juego</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="categorias">CATEGORIAS</string>
    <string name="pc">PC</string>
    <string name="play_station4">PS4</string>
    <string name="nintendo">NINTENDO</string>
    <string name="xbox">XBOX</string>
    <string name="publicar">PUBLICAR</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="titulo_del_juego">Titulo del juego</string>
    <string name="descripcion_del_juego">Descripcion del juego</string>
    <string name="phone">Teléfono</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="sin_telefono">000000000</string>
    <string name="telefono">TELEFONO</string>
    <string name="numeber_of_posts">0</string>
    <string name="publicaciones">PUBLICACIONES</string>
    <string name="nombre_del_perfil">NOMBRE DEL PERFIL</string>
    <string name="email_provider_com">email@provider.com</string>
    <string name="no_hay_publicaciones">No hay publicaciones</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="descripcion_post_detail">DESCRIPCIÓN</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ver_perfil">VER PERFIL</string>
    <string name="descripcion_comentario">Descripción comentario</string>
    <string name="comentario">COMENTARIO</string>
    <string name="likes">0 Me gustas</string>
    <string name="relative_time">Hace 0 min</string>
    <string name="number_likes">Likes</string>
    <string name="play_station">PLAY STATION</string>
    <string name="total_resultados">Total resultados:</string>
    <string name="numero_total_de_resultados">0</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="mensaje">Mensaje</string>
    <string name="hace_un_momento" tools:ignore="Typos">Hace un momento</string>
    <string name="nuevo_mensaje">Nuevo mensaje</string>
    <string name="fecha">Fecha</string>
    <string name="default_web_client_id_2" translatable="false">162761359828-61nbfmq0if2opff494ti2g248d0clgfg.apps.googleusercontent.com</string>
    <string name="num_messages">0</string>
    <string name="usuario">Usuario</string>
    <string name="titulo_publicacion">Título publicación</string>
</resources>