<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_postCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_titlePostCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/titulo_del_juego"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_usernamePostCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/nombre_de_usuario"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_descriptionPostCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_del_juego"
            android:maxLines="2"
            android:layout_margin="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_like_gray"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_likes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/likes"
                android:gravity="center|end"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>