<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageMyPost"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_person_gray"
            tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_title_myPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/titulo_publicacion"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_relativeTimeMyPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_time"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="3dp"/>

    </LinearLayout>

        <ImageView
            android:id="@+id/iv_deleteMyPost"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_cancel"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</FrameLayout>