<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_hd_4k"
    tools:context=".ui.activities.SplashActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/data2"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_logoInfinity"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_socialmedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_infinity_2" />

    <TextView
        android:id="@+id/tv_socialmedia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_tamma_2"
        android:gravity="center"
        android:text="@string/socialmedia"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lottieLogo"
        app:layout_constraintEnd_toEndOf="@+id/lottieLogo"
        app:layout_constraintStart_toStartOf="@+id/lottieLogo"
        app:layout_constraintTop_toTopOf="@+id/lottieLogo"
        app:layout_constraintVertical_bias="0.62" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieLogo"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/data1"
        app:lottie_repeatMode="reverse"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>